--- a/of-2-window-bug-example.xcodeproj/xcshareddata/xcschemes/mySketch Debug.xcscheme
+++ b/of-2-window-bug-example.xcodeproj/xcshareddata/xcschemes/mySketch Debug.xcscheme
@@ -15,64 +15,65 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "mySketch.app"
-               BlueprintName = "mySketch"
-               ReferencedContainer = "container:mySketch.xcodeproj">
+               BuildableName = "of-2-window-bug-example.app"
+               BlueprintName = "of-2-window-bug-example"
+               ReferencedContainer = "container:of-2-window-bug-example.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
-      <Testables>
-      </Testables>
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "mySketch.app"
-            BlueprintName = "mySketch"
-            ReferencedContainer = "container:mySketch.xcodeproj">
+            BuildableName = "of-2-window-bug-example.app"
+            BlueprintName = "of-2-window-bug-example"
+            ReferencedContainer = "container:of-2-window-bug-example.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
+      <Testables>
+      </Testables>
    </TestAction>
    <LaunchAction
+      buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
+      debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "mySketch.app"
-            BlueprintName = "mySketch"
-            ReferencedContainer = "container:mySketch.xcodeproj">
+            BuildableName = "of-2-window-bug-example.app"
+            BlueprintName = "of-2-window-bug-example"
+            ReferencedContainer = "container:of-2-window-bug-example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
+      buildConfiguration = "Debug"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
-      buildConfiguration = "Debug"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "mySketch.app"
-            BlueprintName = "mySketch"
-            ReferencedContainer = "container:mySketch.xcodeproj">
+            BuildableName = "of-2-window-bug-example.app"
+            BlueprintName = "of-2-window-bug-example"
+            ReferencedContainer = "container:of-2-window-bug-example.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
